<resources>
    <string name="app_name">WKFF?</string>
    <string name="action_settings">Settings</string>
    <string name="hint_playername">Player Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="mustaddplayername">Must add some name!</string>
    <string name="dragon_lancelot_name">Lancelot</string>
    <string name="dragon_quasar_name">Quasar</string>
    <string name="title_activity_game_flux">GameFlux</string>
    <string name="kingdom_ohxer">Ohxer</string>
    <string name="kingdom_camelot">Camelot</string>
    <string name="player_limit">Must have at least 4 playes to start!</string>
    <string name="clazz_archery">Archery Magician</string>
    <string name="kingdom_unkown">Unkown</string>
    <string name="clazz_swordman">Swordman Magician</string>
    <string name="clazz_supreme">Supreme Magician</string>
    <string name="clazz_supportadc">Support Magician</string>
    <string name="clazz_spy">Spy</string>
    <string name="clazz_lancer">Lancer Magician</string>
    <string name="clazz_dragon_hunter">Dragon Hunter</string>
    <string name="label_show">Show</string>
    <string name="title_waiting_player">Waiting Player...</string>
    <string name="label_next">Next!</string>
    <string name="label_status">Status</string>
    <string name="label_battle">Battle</string>
    <string name="left_turns">Turns Left:</string>
    <string name="label_target">Target:</string>
    <string name="label_effects">Effects:</string>
    <string name="label_events">Events:</string>
    <string name="label_not_affected">Not Affected</string>
    <string name="efx_poison_name">Poison</string>
    <string name="efx_poison_description">Poisoned players must receive 1 of damage for each turn</string>
    <string name="evt_name_dw">Dark Witch</string>
    <string name="evt_descr_dw">The Dark Witch has rised into this battle!\nShe will try to kill everyone! Beware!</string>
    <string name="evt_end_descr_dw">The Witch has finally found glory!</string>
    <string name="evt_name_giau">God Is Among Us</string>
    <string name="evt_descr_giau">You had earned from god him forces! Use it with knowledge!</string>
    <string name="evt_end_descr_giau">The sacrilegious, this war, wasn\'t for simple humans!</string>
    <string name="efx_stun_name">Stun</string>
    <string name="efx_stun_descr">Immobilize Player, he can\'t move.</string>
    <string name="evt_end_descr_eds">Basically, all the war now it\'s done!\nFinally one kingdom had found glory on the war, and, of course,\nthe other one, had falls miserably, and will never rise back!</string>
    <string name="event_killing_spree">Killing Spree</string>
    <string name="evt_end_descr_ks">Player was orderly, by powered forces, \nthat he might kill an given target,\n but failed.</string>
    <string name="battle_txt">Battle</string>
    <string name="objective_txt">Objectives</string>
    <string name="target">Target:</string>
    <string name="evt_descr_eds">You, magician, need to kill your most\npowerful enemy, the other\'s kingdom\nSupreme Magician!</string>
    <string name="evt_descr_ks">You were orderly to kill this person,\nno matter who is, just KILL!</string>
    <string name="evt_name_bg">Bodyguard</string>
    <string name="evt_descr_bg">You migh convince your kingdom that\n this magician was a friend, or someone\n that is as important as your life!\nHe(She) might don\'t die!</string>
    <string name="evt_end_descr_bg">Magician had failed to protect\nhim friend...</string>
    <string name="skill_godness">Godness Protection</string>
    <string name="player_was_protected">Player was successfully protected for a turn!</string>
    <string name="evt_name_db">Dragon Born</string>
    <string name="evt_dscr_db">Your kingdom\'s dragon had awaken! You must be careful, or you will be taken on crossed fire!</string>
    <string name="evt_end_dscr_db">Dragons are super inteligent creatures, you humans, had got him to nervous, within this fury, he had obliterated both kingdoms!</string>
    <string name="event_defeat_supreme">Defeat Supreme Magician</string>
    <string name="formatter_skill_counter_times">%1$s / %2$s</string>
    <string name="skill_attack">Attack</string>
    <string name="select_limit">You can\'t select more players!</string>
    <string name="label_skils">Skills:</string>
    <string name="label_accept">Accept</string>
    <string name="mustselectsomeplayer">You must select some player!</string>
    <string name="youcanattack2player">You can attack 2 times, attack this player twice?</string>
    <string name="label_player">Player</string>
    <string name="skill_attack_lance">Lance Attack</string>
    <string name="skill_attack_sword">Sword Attack</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="set_use_default_clazzs">Use custom Classes preset</string>
    <string name="clazzes">Classes</string>
    <string name="set_dialog_change_player_name">Change Player Name</string>
    <string name="set_local_players_label">Local Players</string>
    <string name="set_edit_player_name">Edit Name</string>
    <string name="set_delete_player">Delete player</string>
    <string name="set_player_deleted">Player Deleted!</string>
    <string name="skill_attack_bow">Attack with Bow</string>
    <string name="skill_given_protection">Given Protection</string>
    <string name="skill_effectation">Effectation</string>
    <string name="list_item_wallet_count_format">x %1$s</string>
    <string name="label_cancel">Cancel</string>
    <string name="evt_name_al">Alchemist</string>
    <string name="evt_descr_al">Someone in this battlefield has the powerful knowledge fom the alchemy! BEWARE!</string>
    <string name="evt_end_descr_al">The Alchemist has found it vengeance!</string>
    <string name="uouareinthisfield">You are in this field!!</string>
    <string name="movedtofield">Moved to field:</string>
    <string name="label_beware">Beware!!! Someone might be preparing a surprise for you!</string>
    <string name="label_owner">Owner</string>
    <string name="youarestunnedyouwontbeabletomovetillitpersists">You\'re Stunned! You can move while in this effect!</string>
    <string name="label_move">Move!</string>
    <string name="skill_null_attack">Null Direct Attack</string>
    <string name="youwereattackedbutwonttakedamage">You were attacked! For this turn you won\'t take any damage.</string>
    <string name="skill_change_position">Change Position</string>
    <string name="menu_force_finish_label">Force Finish</string>
    <string name="menu_ff_descr">Clear all values and return to main sceen.</string>
    <string name="wallet_insuf">Insufficient Items! Choose another!</string>
    <string name="label_dark_theme">Use Dark Theme</string>
    <string name="label_require_restart">Require restar.</string>
    <string name="no_one_died">No players died this turn.</string>
    <string name="label_damage_step">Damage Step</string>
    <string name="died_by_dragon">Was killed by a dragon!</string>
    <string name="dead_info_1">Has died this turn.</string>
    <string name="dead_info_2">Was completly obliterated by him(her) enemies!</string>
    <string name="bug">-B-U-G-</string>
    <string name="died_by_magic">Was killed by MAGIC!</string>
    <string name="title_activity_game_end">Game Over!</string>
    <string name="label_has_died">Has Died?</string>
    <string name="label_was_affected">Was Affected?</string>
    <string name="label_attacked">Was Attacked?</string>
    <string name="label_events_pref">Events</string>
    <string name="label_warning">WARNING!</string>
    <string name="label_warning_summary">For a balanced gameplay, and preventing crashes, system automatically will balance game if you diable all classees or just left enabled 2 or less classes.</string>
    <string name="label_enable_debug_log">Mark if you want to see all game \'behind the scenes\'</string>
    <string name="label_enable_debug">Enable Full Debug Log</string>
    <string name="sign_out">Sign out</string>
</resources>