<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="org.gpginc.ntateam.projectwkff.SettingsActivity$ClazzPreferFrag"
        app:icon="@drawable/sync"
        app:key="clazz_header"
        app:title="@string/clazzes" />
    <Preference
        app:fragment="org.gpginc.ntateam.projectwkff.SettingsActivity$EventPreferences"
        app:icon="@drawable/sync"
        app:key="evt_header"
        app:title="@string/label_events_pref"/>
    <Preference
        app:fragment="org.gpginc.ntateam.projectwkff.SettingsActivity$LocalPlayersPreferFrag"
        app:key="pleyer_preferences"
        app:title="@string/set_local_players_label"/>
    <Preference
        app:fragment="org.gpginc.ntateam.projectwkff.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header"/>
    <CheckBoxPreference
        android:background="@android:color/transparent"
        app:key="DARK_THEME"
        app:summary="@string/label_require_restart"
        app:title="@string/label_dark_theme" />
    <CheckBoxPreference
        android:background="@android:color/transparent"
        app:key="ALLDEBUG"
        app:summary="@string/label_enable_debug_log"
        app:title="@string/label_enable_debug" />
    <Preference
        app:icon="@drawable/ic_out"
        app:title="@string/sign_out"
        app:key="logout"/>

</PreferenceScreen>
