<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="default_clazz"
        app:title="@string/set_use_default_clazzs"
        app:defaultValue="false"
        app:icon="@drawable/ic_config"/>

    <SwitchPreferenceCompat
        app:dependency="default_clazz"
        app:defaultValue="true"
        app:key="archery"
        app:title="@string/clazz_archery"
        app:iconSpaceReserved="false"/>
    <SwitchPreferenceCompat
        app:dependency="default_clazz"
        app:defaultValue="true"
        app:key="swordman"
        app:title="@string/clazz_swordman"
        app:iconSpaceReserved="false"/>
    <SwitchPreferenceCompat
        app:dependency="default_clazz"
        app:defaultValue="true"
        app:key="lancer"
        app:title="@string/clazz_lancer"
        app:iconSpaceReserved="false"/>
    <SwitchPreferenceCompat
        app:dependency="default_clazz"
        app:defaultValue="true"
        app:key="adc"
        app:title="@string/clazz_supportadc"
        app:iconSpaceReserved="false"/>
    <SwitchPreferenceCompat
        app:dependency="default_clazz"
        app:defaultValue="true"
        app:key="dragon_hunter"
        app:title="@string/clazz_dragon_hunter"
        app:iconSpaceReserved="false"/>
    <Preference
        app:icon="@drawable/ic_warn"
        app:title="@string/label_warning"
        app:summary="@string/label_warning_summary" />


</PreferenceScreen>
