<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="PlayerStatusBinder">
        <import type="org.gpginc.ntateam.projectwkff.runtime.util.Util"/>
        <import type="android.view.View"/>
        <variable
            name="player"
            type="org.gpginc.ntateam.projectwkff.runtime.Player" />
        <variable
            name="RES"
            type="org.gpginc.ntateam.projectwkff.GameFlux" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/player_life"
                    android:layout_width="wrap_content"
                    android:layout_height="96dp"
                    android:src="@{player.lifeIcon}" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_effects"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/effects"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_not_affected"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="@{player.affected ? View.GONE : View.VISIBLE}"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_events"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/events"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>