<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="player"
            type="org.gpginc.ntateam.projectwkff.runtime.Player" />
        <import type="android.view.View"/>
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="40dp"
        app:cardMaxElevation="6dp"
        app:cardBackgroundColor="?android:attr/windowBackground"
        android:padding="5dp"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/transparent">

                <ImageView
                    android:id="@+id/kingdom_emblem"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@{player.kingdom.icon, default=@drawable/ohxer_emblem}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".75"
                    android:orientation="vertical"
                    android:background="@android:color/transparent">

                    <TextView
                        android:id="@+id/player_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:gravity="center_vertical|fill_vertical"
                        android:paddingStart="4dp"
                        android:text="@{player.name, default=playername}"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/player_clazz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:gravity="center_vertical|fill_vertical"
                        android:paddingStart="4dp"
                        android:text="@{player.clazz.name, default=someclazz}"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/plus_info"
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_weight="0"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dropdown_extras"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginStart="10dp"
                            android:src="@{player.clazz.icon, default=@drawable/ic_clazz_archery}" />

                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="196dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:src="@{player.lifeIcon, default=@drawable/reincarn_player_life_icon}" />

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            android:src="@{player.fieldIcon, default=@drawable/unkown_e}" />
                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <TextView
                            android:id="@+id/label_has_died"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|fill_vertical"
                            android:paddingStart="10dp"
                            android:text="@string/label_has_died"
                            android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_weight="0"
                            android:src="@{player.isDead ? @drawable/ic_checked : @drawable/ic_delete, default=@drawable/ic_delete}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <TextView
                                android:id="@+id/label_affected"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical|fill_vertical"
                                android:paddingStart="10dp"
                                android:text="@string/label_was_affected"
                                android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_weight="0"
                            android:src="@{player.affected ? @drawable/ic_checked : @drawable/ic_delete, default=@drawable/ic_delete}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:visibility="@{player.affected ? View.VISIBLE : View.GONE}">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/efxlist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <TextView
                                android:id="@+id/label_attacked"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical|fill_vertical"
                                android:paddingStart="10dp"
                                android:text="@string/label_attacked"
                                android:textSize="18sp" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_weight="0"
                            android:src="@{player.attacked ? @drawable/ic_checked : @drawable/ic_delete, default=@drawable/ic_delete}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:visibility="@{player.attacked ? View.VISIBLE : View.GONE}">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/atckrslist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>